create docker compose files